# decentralized-event-fairies

./: .firebaserc  .gitignore  README.md  account.txt  docker-compose.yaml  firebase.json  nx.json  package-lock.json  package.json
.github/workflows/: firebase-hosting-pull-request.yml
apps/backend/src/app/: app.controller.ts  app.module.ts  hasura.controller.ts
apps/backend/src/jwt/: jwt.spec.ts  jwt.ts
apps/backend/src/vc/: vc.ts
apps/frontend/: project.json  webpack.config.js
apps/frontend/src/: main.tsx  router.tsx  theme.ts
apps/frontend/src/app/: app.tsx
apps/frontend/src/components/: EventConfirmCard.tsx  EventDetailCard.tsx  EventEditForm.tsx  EventListCard.tsx  EventOverviewCard.tsx  Layout.tsx  Loading.tsx  Navbar.tsx  SignInForm.tsx  SignUpForm.tsx  UserProfileCard.tsx  layout.tsx
apps/functions/: project.json
apps/functions/src/: main.ts  package.json
apps/hasura/: default.nix  docker-compose.yml
apps/hasura/initialize/: 00-connect-database.sh  01-database.sh  01-database.sql  02-actions.sh
dids/: Cargo.toml  shell.nix
dids/examples/: create_did.rs  create_vc.rs  create_vp.rs
dids/src/: error.rs  handler.rs  holder.rs  issuer.rs  jwt.rs  main.rs  router.rs  utils.rs  verifier.rs
dids/src/handler/: issue.rs  presentation.rs  verify.rs
dids/src/issuer/: issue.rs
dids/src/utils/: random.rs
dids/test_key/: ec_private.pem  ec_public.pem
hasura/initialize/: 01-database.sh
wallet/: package-lock.json  package.json
wallet-ext/: README.md  package.json
wallet-ext/public/: manifest.json
wallet-rs/: Cargo.toml  shell.nix
wallet-rs/src/: error.rs  handler.rs  main.rs  router.rs  stronghold.rs
wallet-rs/src/handler/: stronghold.rs
workflows/: firebase-hosting-merge.yml
(+13 files in other folders)
