[package]
name = "dids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity_iota = { version = "0.6" }
tokio = "1.21.2"
pretty_env_logger = "0.4.0"

[[example]]
name = "create_did"
path = "examples/create_did.rs"

[[example]]
name = "create_vc"
path = "examples/create_vc.rs"

[[example]]
name = "create_vp"
path = "examples/create_vp.rs"
