[package]
name = "dids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity_iota = { version = "0.6" }
tokio = "1.21.2"
pretty_env_logger = "0.4.0"
actix-web = "4.1.0"
env_logger = "0.9.0"
serde_json = "1.0.87"
serde = "1.0.147"
thiserror = "1.0.37"
actix-cors = "0.6.4"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[example]]
name = "create_did"
path = "examples/create_did.rs"

[[example]]
name = "create_vc"
path = "examples/create_vc.rs"

[[example]]
name = "create_vp"
path = "examples/create_vp.rs"
