[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity_iota = { version = "0.6" }
actix-web = "4.1.0"
env_logger = "0.9.0"
serde_json = "1.0.87"
serde = "1.0.147"
thiserror = "1.0.37"
